# a-sixel

./: .gitignore  Cargo.toml  README.md  run_tests.ps1  run_tests.sh
examples/: image_viewer.rs  transparency.rs
src/: adu.rs  bit.rs  bitmerge.rs  dither.rs  focal.rs  kmeans.rs  kmedians.rs  lib.rs  median_cut.rs  octree.rs  wu.rs
test_images/: README.md
