[package]
name        = "a-sixel"
version     = "0.6.0"
edition     = "2024"
license     = "MIT OR Apache-2.0"
description = "A small sixel + palette selection + dithering library."
keywords    = [ "sixel", "terminal", "encoding", "quantization", "dithering" ]
readme      = "README.md"
repository  = "https://github.com/Jesterhearts/a-sixel"
exclude     = [ "test_images" ]

[features]
default              = [ "adu", "bit-merge", "focal", "k-means" ]
all-algorithms       = [ "adu", "bit-merge", "focal", "k-means", "k-medians", "median-cut", "octree", "wu" ]
adu                  = [  ]
bit-merge            = [ "k-means" ]
focal                = [ "k-means", "dep:libblur", "dep:rustfft", "dep:atomic_float" ]
k-means              = [ "dep:atomic_float" ]
k-medians            = [ "dep:dashmap", "dep:atomic_float" ]
median-cut           = [  ]
octree               = [  ]
wu                   = [ "dep:ndarray", "dep:rustyml" ]
partial-transparency = [ "dep:termbg" ]
# For debugging -- maps the saliency scores used to determine color weights to a greyscale image and dumps each map to a file.
dump-saliency       = [ "dump-l-saliency", "dump-a-saliency", "dump-b-saliency", "dump-local-saliency", "dump-weights" ]
dump-l-saliency     = [  ]
dump-a-saliency     = [  ]
dump-b-saliency     = [  ]
dump-local-saliency = [  ]
dump-weights        = [  ]
# For debugging -- prints the MSE of the quantized image vs the original image.
dump-mse = [  ]
# For debugging -- prints the mean & threshold Delta E of the quantized image vs the original image.
dump-delta-e = [  ]
# For debugging -- dumps the dssim score of the quantized image vs the original image.
dump-dssim = [ "dep:dssim-core", "dep:rgb" ]
# For debugging -- dumps the hamming distanced of the quantized image's phash vs the original image's phash.
dump-phash = [ "dep:image_hasher" ]
# For debugging -- dumps the quantized image to a file with a random file name.
dump-image = [  ]
# Enables the nightly `doc_auto_cfg` feature.
ENABLE_DOC_AUTO_CFG = [  ]

[dependencies]
atomic_float  = { version = "1.1.0", optional = true }
dashmap       = { version = "6.1.0", optional = true, features = [ "rayon" ] }
dilate        = "0.6.3"
dssim-core    = { version = "3.2.11", optional = true }
image         = { version = "0.25.6", default-features = false, features = [ "rayon" ] }
image_hasher  = { version = "3.0.0", optional = true }
kiddo         = "5.2.2"
libblur       = { version = "0.19.4", optional = true }
ndarray       = { version = "0.16.1", optional = true }
ordered-float = "5.0.0"
palette       = { version = "0.7.6", default-features = false, features = [ "std" ] }
rustyml       = { version = "0.6.2", optional = true }
rayon         = "1.11.0"
rgb           = { version = "0.8.52", optional = true }
rustfft       = { version = "6.4.0", optional = true }
sobol_burley  = "0.5.0"
termbg        = { version = "0.6.2", optional = true }

[dev-dependencies]
anyhow = "1.0.99"
clap   = { version = "4.5.45", features = [ "derive" ] }
image  = "0.25.6"
strum  = { version = "0.27.2", features = [ "derive" ] }

[build-dependencies]
rustc_version = "0.4.1"

[package.metadata.docs.rs]
all-features = true
