[package]
name        = "a-sixel"
version     = "0.8.0"
edition     = "2024"
description = "A small sixel + palette selection + dithering library."
readme      = "README.md"
repository  = "https://github.com/Jesterhearts/a-sixel"
license     = "MIT OR Apache-2.0"
keywords    = ["dithering", "encoding", "quantization", "sixel", "terminal"]
exclude     = ["test_images"]

[package.metadata.docs.rs]
all-features = true

[[bin]]
name              = "a-sixel"
required-features = ["cli"]

[dependencies]
anyhow        = { version = "1.0.100", optional = true }
atomic_float  = { version = "1.1.0", optional = true }
clap          = { version = "4.5.48", features = ["derive"], optional = true }
dashmap       = { version = "6.1.0", features = ["rayon"], optional = true }
dilate        = "0.6.3"
dssim-core    = { version = "3.4.0", optional = true }
image         = { version = "0.25.8", default-features = false, features = [
  "rayon"
] }
image_hasher  = { version = "3.0.0", optional = true }
itoa          = "1.0.18"
kiddo         = "5.2.2"
libblur       = { version = "0.23.3", optional = true }
ndarray       = { version = "0.17.2", optional = true }
ordered-float = "5.1.0"
palette       = { version = "0.7.6", default-features = false, features = [
  "std"
] }
rayon         = "1.11.0"
rgb           = { version = "0.8.52", optional = true }
rustfft       = { version = "6.4.1", optional = true }
rustyml       = { version = "0.11.0", features = ["utility"], optional = true }
sobol_burley  = "0.5.0"
strum         = { version = "0.28.0", features = ["derive"], optional = true }
termbg        = { version = "0.6.2", optional = true }

[dev-dependencies]
anyhow = "1.0.100"
image  = "0.25.8"

[build-dependencies]
rustc_version = "0.4.1"

[features]
default              = ["adu", "bit-merge", "k-means"]
# Enables the nightly `doc_auto_cfg` feature.
ENABLE_DOC_AUTO_CFG  = []
adu                  = []
all-algorithms       = [
  "adu",
  "bit-merge",
  "focal",
  "k-means",
  "k-medians",
  "median-cut",
  "octree",
  "wu"
]
bit-merge            = ["k-means"]
cli                  = [
  "all-algorithms",
  "dep:anyhow",
  "dep:clap",
  "image/jpeg",
  "image/png",
  "strum"
]
# For debugging -- prints the mean & threshold Delta E of the quantized image vs the original image.
dump-delta-e         = []
# For debugging -- dumps the dssim score of the quantized image vs the original image.
dump-dssim           = ["dep:dssim-core", "dep:rgb"]
# For debugging -- dumps the quantized image to a file with a random file name.
dump-image           = []
# For debugging -- prints the MSE of the quantized image vs the original image.
dump-mse             = []
# For debugging -- dumps the hamming distanced of the quantized image's phash vs the original image's phash.
dump-phash           = ["dep:image_hasher"]
dump-weights         = []
focal                = ["dep:rustfft"]
k-means              = ["dep:atomic_float"]
k-medians            = ["dep:atomic_float", "dep:dashmap"]
median-cut           = []
octree               = []
partial-transparency = ["dep:termbg"]
strum                = ["dep:strum"]
wu                   = ["dep:ndarray", "dep:rustyml"]

[profile.release-debug]
inherits = "release"
debug    = true
